[package]
name = "xyi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.18", features = ["tracing", "ws", "macros"]}
clap = "4.2.4"
indicatif = "0.17.3"
rayon = "1.7.0"
seahash = "4.1.0"
serde = {version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
tokio = {version = "1.27.0", features = ["full"]}
tokio-util = {version="0.7.8", features = ["io"]}
tracing-subscriber = "0.3.17"
